removed the hr below the header and replaced with bottom-only border. removed hr above footer and replaced with top only border aliceblue, it's barely visible but it's there. I wanted to match the bio color. also tweaked top margins for links and main bio section. changed font family in the main bio. set a fixed width for the image before deciding upon a fixed percentage so that it scales down in a smaller window It was unclear whether either was preferred based on the assignment image example sso I made a decision there.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,18 @@ body {
     background-color: whitesmoke;
     background-image: none;
     color: whitesmoke;
-    height:125px;
+    height:115px;
     margin-bottom: 0px;
+    border-style: solid;
+    border-bottom-width: 2px;
+    border-top-width: 0px;
+    border-color: gray;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    
+
     
     
     
@@ -23,6 +33,7 @@ body {
     background-color: whitesmoke;
     width: 100%;
     color: aliceblue;
+    
     
 }
 
@@ -44,15 +55,19 @@ a {color: gray;}
     float: right;
     color: gray;
     font-size: 20px;
-    margin-top: 40px;
+    margin-top: 30px;
+    max-width: 960px;
+    
+
 
 }
 
 
 
 #full {
+    margin-left: 0px;
     
-    max-width: 960px;
+    
     
 }
 
@@ -66,6 +81,9 @@ a {color: gray;}
     border-color: gray;
     border: solid;
     margin-bottom: 20px;
+    
+    
+
 
 
 }
@@ -74,7 +92,7 @@ a {color: gray;}
 
 #floatimage {
     float: left;
-    width: 30%;
+    width: 25%;
     margin-left: 30px;
     margin-right: 30px;
 }
@@ -87,10 +105,24 @@ a {color: gray;}
 
 #main-bio {
     clear:both;
-    margin-left: 25px;
+    margin-left: 20px;
     background-color: aliceblue;
     float: left;
     margin-bottom: 10px;
+    align-content: center;
+    position: fixed;
+    left: 1%;
+    right: 1%;
+    margin-right: 20px;
+    max-width: 960px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 25px;
+    
+    
+
+    
+    
+    
     
 
 }
@@ -110,24 +142,41 @@ p {
    margin-left: 30px;
    width: 130%;
   
-   
-    
-    
-    
-    
 }
 
 
 #footer {
     
     text-align: center;
-    font-size: 10px;
+    font-size: 12px;
+    font-style: italic; 
     clear: both;
-    margin-top: 30px;
+    z-index: 1;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: darkgray;
+    margin-left: 0px;
+    color: whitesmoke;
+    padding: 10px;
+    border-style: solid;
+    border-bottom-width: 0px;
+    border-top-width: 10px;
+    border-color:aliceblue;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    
     
      
     
 
 } 
+
+footer {
+    position: relative;
+   
+}
 
 
